# eng

./: .gitignore
docs/spec_learn/: MAP_STEPS_RENDERER.md
worldbox/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h  vcpkg.json  vertex_buffer.h
worldbox/data/: scenes.conf
worldbox/data/apple/: pipeline.conf
worldbox/data/overworld/: pipeline.conf
worldbox/data/pixelizer/: pipeline.conf
worldbox/shaders/: AI_GUIDE.md
worldbox/shaders/apple/: apple.frag  post.frag
worldbox/shaders/overworld/: clouds.frag  post.frag  sprites.frag  terrain.frag
worldbox/shaders/pixelizer/: pixelize.frag  post.frag
worldbox/shaders/shared/: screen.vert
worldbox/src/: main.cpp
worldbox/src/core/: mesh.cpp  mesh.h  shader.cpp  shader.h  vertex_buffer.h  vertex_layout.h
worldbox/src/editor/: editor.cpp  editor.h
worldbox/src/engine/: engine.cpp  engine.h
worldbox/src/sprite/: spritesheet.cpp  spritesheet.h
